azure-policy/disable-sa-automount/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDisableServiceAccountAutoMount
metadata:
  name: pod-no-serviceaccount-automount
spec:
  match:
    excludedNamespaces:
      - kube-system
      - istio-system
      - gatekeeper-system
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
