azure-policy/disable-sa-automount/template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8sdisableserviceaccountautomount
spec:
  crd:
    spec:
      names:
        kind: K8sDisableServiceAccountAutoMount
        listKind: K8sDisableServiceAccountAutoMountList
        plural: k8sdisableserviceaccountautomount
        singular: k8sdisableserviceaccountautomount
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sdisableserviceaccountautomount

        missing(obj) = true {
          not obj.automountServiceAccountToken == true
          not obj.automountServiceAccountToken == false
        }
        
        violation[{"msg": msg}] {
          p := input_pod[_]
          missing(p.spec)
          msg := sprintf("automountServiceAccountToken field is missing: %v", [p.metadata.name])
        }

        violation[{"msg": msg, "details": {}}] {
            p := input_pod[_]
            p.spec.automountServiceAccountToken
            msg := sprintf("Service Account token automount is not allowed: %v, spec: %v", [p.metadata.name, p.spec.automountServiceAccountToken])
        }

        input_pod[p] {
            p := input.review.object
        }
